@@ -1,3 +1,8 @@
+2014-10-09  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/63445
+	* gcc.dg/Wstrict-overflow-26.c: New testcase.
+
 2014-10-08  Pat Haugen  <pthaugen@us.ibm.com>
 
 	* gcc.dg/vmx/3c-01a.c: Add default options from vmx.exp.
